--- a/index.html
+++ b/index.html
@@ -5,12 +5,38 @@
             Explore and Travel
         </title>
         <meta charset=UTF-8>
-        <link rel="typography" href="css/index.css">
+        <link rel="stylesheet" href="./css/index.css">
         <link
             href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Mulish:wght@300;400;700&family=Playfair+Display:wght@700&display=swap"
             rel="stylesheet">
     </head>
     <body>
-        
+        <header>
+            <div class="section-container">
+                <a href="./">
+                    <img src="./img/logo.svg" alt="logo">
+                </a>
+                <nav>
+                    <ul class="menu">
+                        <li>
+                            <a href="#" class="active">Home</a>
+                        </li>
+                        <li>
+                            <a href="#">Destinations</a>
+                        </li>
+                        <li>
+                            <a href="#">About</a>
+                        </li>
+                        <li>
+                            <a href="#">Partner</a>
+                        </li>
+                    </ul>
+                    <ul class="buttons">
+                        <li><button class="transparent">Login</button></li>
+                        <li><button>Register</button></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
     </body>
 </html>
