--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <header>
             <div class="section-container">
-                <a href="./">
+                <a href="index.html">
                     <img src="./img/logo.svg" alt="logo">
                 </a>
                 <nav>
