section form and image

--- a/index.html
+++ b/index.html
@@ -38,5 +38,55 @@
                 </nav>
             </div>
         </header>
+        <section class="form-and-image">
+            <div class="section-container">
+                <div class="text-and-form-wrapp">
+                    <h1>Explore and Travel</h1>
+                    <h2 class="h3">Holiday finder</h2>
+                    <form name="Explore">
+                        <fieldset>
+                            <div class="select-wrapper">
+                                <select name="Location">
+                                    <option value="Location">Location</option>
+                                    <option value="Indonesia">Indonesia</option>
+                                    <option value="China">China</option>
+                                    <option value="Switzerland">Switzerland</option>
+                                    <option value="Montenegro">Montenegro</option>
+                                </select>
+                            </div>
+                            <div class="select-wrapper">
+                                <select name="Activity">
+                                    <option value="Activity">Activity</option>
+                                    <option value="Ski resort">Ski resort</option>
+                                    <option value="Beach holiday">Beach holiday</option>
+                                    <option value="Mountain climb">Mountain climb</option>
+                                </select>
+                            </div>
+                        </fieldset> 
+                        <fieldset>   
+                            <div class="select-wrapper">
+                                <select name="Grade">
+                                    <option value="Grade">Grade</option>
+                                    <option value="5">5</option>
+                                    <option value="4">4</option>
+                                    <option value="3">3</option>
+                                </select>
+                            </div> 
+                            <div class="select-wrapper">
+                                <select name="Date">
+                                    <option value="Date">Date</option>
+                                    <option value="Winter">Winter</option>
+                                    <option value="Spring">Spring</option>
+                                    <option value="Summer">Summer</option>
+                                    <option value="Autumn">Autumn</option>
+                                </select>
+                            </div>    
+                        </fieldset>
+                        <button type="submit">Explore</button>
+                    </form>
+                </div>
+                <img src="./img/traveler-with-backpack.svg" alt="traveler-with-backpack">
+            </div>
+        </section>
     </body>
 </html>
