second and fourth section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="text-and-form-wrapp">
                     <h1>Explore and Travel</h1>
                     <h2 class="h3">Holiday finder</h2>
-                    <form name="Explore">
+                    <form>
                         <fieldset>
                             <div class="select-wrapper">
                                 <select name="Location">
@@ -82,10 +82,50 @@
                                 </select>
                             </div>    
                         </fieldset>
-                        <button type="submit">Explore</button>
+                        <button class="explore" type="submit">Explore</button>
                     </form>
                 </div>
-                <img src="./img/traveler-with-backpack.svg" alt="traveler-with-backpack">
+                <img class="main-picture" src="./img/with-backpack.svg" alt="traveler-with-backpack"> 
+                <img class="mini-circle" src="./img/circle42.svg">
+                <img class="circle" src="./img/circle42.svg">
+                <img class="plus" src="./img/plus31.svg">
+            </div>
+        </section>
+
+        <section class="text-and-image">
+            <div class="section-container">
+                <img class="section-picture" src="./img/with-parachute.svg" alt="traveler-with-parachute">
+                <img class="plus" src="./img/plus31.svg">
+                <img class="mini-circle" src="./img/circle42.svg">
+                <div class="text-wrapper">
+                    <h2>
+                        A new way to explore the world
+                    </h2>
+                    <p>
+                        For decades travellers have reached for Lonely Planet books when looking to plan and execute their perfect
+                        trip, but now, they can also let Lonely Planet Experiences lead the way
+                    </p>
+                    <a href="#" class="button">Learn more</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="text-and-image reverse" >
+            <div class="section-container">
+                <img class="section-picture" src="./img/with-smartphone.svg" alt="traveler-with-backpack">
+                <img class="plus" src="./img/plus31.svg">
+                <img class="mini-circle" src="./img/circle42.svg">
+                <img class="plus-second" src="./img/plus31.svg"> 
+                <div class="text-wrapper">
+                    <h2>
+                        Guides by Thousand Sunny
+                    </h2>
+                    <p>
+                        Packed with tips and advice from our on-the-ground experts, our city guides app (iOS and Android) is the ultimate
+                        resource before and during a trip.
+                    </p>
+                    <a href="./files/css обнуление.txt" class="button" download="Guides_by_Thousand_Sunny">Download</a>
+                </div>
             </div>
         </section>
     </body>
