section featured destination

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             rel="stylesheet">
     </head>
     <body>
+        
         <header>
             <div class="section-container">
                 <a href="index.html">
@@ -38,6 +39,7 @@
                 </nav>
             </div>
         </header>
+
         <section class="form-and-image">
             <div class="section-container">
                 <div class="text-and-form-wrapp">
@@ -94,9 +96,7 @@
 
         <section class="text-and-image">
             <div class="section-container">
-                <img class="section-picture" src="./img/with-parachute.svg" alt="traveler-with-parachute">
-                <img class="plus" src="./img/plus31.svg">
-                <img class="mini-circle" src="./img/circle42.svg">
+                <img class="main-picture" src="./img/with-parachute.svg" alt="traveler-with-parachute">
                 <div class="text-wrapper">
                     <h2>
                         A new way to explore the world
@@ -106,16 +106,61 @@
                         trip, but now, they can also let Lonely Planet Experiences lead the way
                     </p>
                     <a href="#" class="button">Learn more</a>
+                </div>    
+                <img class="plus" src="./img/plus31.svg">
+                <img class="mini-circle" src="./img/circle42.svg">
+            </div>
+        </section>
+
+        <section class="featured-destination">
+            <div class="section-container">
+                <div class="title-section">
+                    <h2>Featured destinations</h2>
+                    <a href="#" class="view-all">View all</a>
                 </div>
+                <ul class="destination">
+                    <li>
+                        <figure>
+                            <img src="./img/indonesia.svg" alt="indonesia">
+                            <figcaption>
+                                Raja Ampat <span>Indonesia</span> 
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./img/china.svg" alt="china">
+                            <figcaption>
+                                Fanjingshan <span>China</span>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./img/switzerland.svg" alt="switzerland">
+                            <figcaption>
+                                Vevey <span>Switzerland</span>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./img/montenegro.svg" alt="montenegro">
+                            <figcaption>
+                                Skadar <span>Montenegro</span>
+                            </figcaption>
+                        </figure>
+                    </li>
+                </ul>
+                <img class="plus" src="./img/plus31.svg">
+                <img class="mini-circle-top" src="./img/circle42.svg">
+                <img class="mini-circle" src="./img/circle42.svg">
             </div>
         </section>
 
         <section class="text-and-image reverse" >
             <div class="section-container">
-                <img class="section-picture" src="./img/with-smartphone.svg" alt="traveler-with-backpack">
-                <img class="plus" src="./img/plus31.svg">
-                <img class="mini-circle" src="./img/circle42.svg">
-                <img class="plus-second" src="./img/plus31.svg"> 
+                <img class="main-picture" src="./img/with-smartphone.svg" alt="traveler-with-backpack">
                 <div class="text-wrapper">
                     <h2>
                         Guides by Thousand Sunny
@@ -126,7 +171,11 @@
                     </p>
                     <a href="./files/css обнуление.txt" class="button" download="Guides_by_Thousand_Sunny">Download</a>
                 </div>
+                <img class="plus" src="./img/plus31.svg">
+                <img class="mini-circle" src="./img/circle42.svg">
+                <img class="plus-second" src="./img/plus31.svg"> 
             </div>
         </section>
+
     </body>
 </html>
