--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Mulish:wght@300;400;700&family=Playfair+Display:wght@700&display=swap"
             rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="./libs/slick/slick.css" />
+        <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+            integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="./libs/slick/slick.min.js"></script>
+        <script type="text/javascript" src="./index.js"></script>
     </head>
     <body>
         
@@ -114,7 +119,7 @@
 
         <section class="featured-destination">
             <div class="section-container">
-                <div class="title-section">
+                <div class="title-wrapper">
                     <h2>Featured destinations</h2>
                     <a href="#" class="view-all">View all</a>
                 </div>
@@ -177,5 +182,17 @@
             </div>
         </section>
 
-    </body>
+        <section class="testimonials">
+            <div class="section-container">
+                <h2>Testimonials</h2>
+                <div class="testimonials-slider">
+                    <div>your content</div>
+                    <div>your content</div>
+                    <div>your content</div>
+                </div>
+
+            </div>
+        </section>
+
+        </body>
 </html>
