--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                     <nav>
                         <ul class="destinations">
                             <li>
-                                <a href="#"><h4>Destinations</h4></a>
+                                <h4>Destinations</h4>
                             </li>
                             <li>
                                 <a href="#">Africa</a>
@@ -355,7 +355,7 @@
                     
                         <ul class="shop">
                             <li>
-                                <a href="#"><h4>Shop</h4></a>
+                                <h4>Shop</h4>
                             </li>
                             <li>
                                 <a href="#">Destination Guides</a>
@@ -376,7 +376,7 @@
                     
                         <ul class="interests">
                             <li>
-                                <a href="#"><h4>Interests</h4></a>
+                                <h4>Interests</h4>
                             </li>
                             <li>
                                 <a href="#">Adventure Travel</a>
