--- a/index.html
+++ b/index.html
@@ -121,12 +121,11 @@
             <div class="section-container">
                 <div class="title-wrapper">
                     <h2>Featured destinations</h2>
-                    <div class="arrow-view">
-                        <a href="#" class="view-all">View all</a>
-                        <svg width="6" height="11" viewBox="0 0 6 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 1L5 5.5L1 10" stroke="#FB8F1D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                    <a href="#" class="view-all">View all
+                        <svg class="arrow" width="6" height="11" viewBox="0 0 6 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M1 1L5 5.5L1 10" stroke="#FB8F1D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
-                    </div>
+                    </a>
                 </div>
                 <ul class="destination">
                     <li>
@@ -246,12 +245,11 @@
             <div class="section-container">
                 <div class="title-wrapper">
                     <h2>Trending stories</h2>
-                    <div class="arrow-view">
-                        <a href="#" class="view-all">View all</a>
-                        <svg width="6" height="11" viewBox="0 0 6 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 1L5 5.5L1 10" stroke="#FB8F1D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                    <a href="#" class="view-all">View all
+                        <svg class="arrow" width="6" height="11" viewBox="0 0 6 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M1 1L5 5.5L1 10" stroke="#FB8F1D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
-                    </div>
+                    </a>
                 </div>
                 <ul class="stories">
                     
