--- a/index.html
+++ b/index.html
@@ -192,11 +192,13 @@
                 <div class="testimonials-slider">
                     <div class="slide">
                         <div class="text-slider">
-                            <img class="stars" src="./img/star.svg" alt="stars">
-                            <img class="stars" src="./img/star.svg" alt="stars">
-                            <img class="stars" src="./img/star.svg" alt="stars">
-                            <img class="stars" src="./img/star.svg" alt="stars">
-                            <img class="stars" src="./img/star.svg" alt="stars">
+                            <ul class="stars">
+                                <li><img src="./img/star.svg" alt="stars"></li>
+                                <li><img src="./img/star.svg" alt="stars"></li>
+                                <li><img src="./img/star.svg" alt="stars"></li>
+                                <li><img src="./img/star.svg" alt="stars"></li>
+                                <li><img src="./img/star.svg" alt="stars"></li>
+                            </ul>
                             <blockquote>“Quisque in lacus a urna fermentum euismod. Integer mi nibh, dapibus ac scelerisque eu, facilisis quis
                             purus. Morbi blandit sit amet turpis nec”</blockquote>
                             <cite>Edward Newgate <span>Founder Circle</span></cite>
@@ -207,11 +209,13 @@
                     </div>
                     <div class="slide">
                         <div class="text-slider">
-                            <img class="stars" src="./img/star.svg" alt="stars">
-                            <img class="stars" src="./img/star.svg" alt="stars">
-                            <img class="stars" src="./img/star.svg" alt="stars">
-                            <img class="stars" src="./img/star.svg" alt="stars">
-                            <img class="stars" src="./img/star.svg" alt="stars">
+                            <ul class="stars">
+                                <li><img src="./img/star.svg" alt="stars"></li>
+                                <li><img src="./img/star.svg" alt="stars"></li>
+                                <li><img src="./img/star.svg" alt="stars"></li>
+                                <li><img src="./img/star.svg" alt="stars"></li>
+                                <li><img src="./img/star.svg" alt="stars"></li>
+                            </ul>
                             <blockquote>“Your time is limited, so don’t waste it living someone else’s life </blockquote>
                             <cite>Stiv Dzhobs </cite>
                         </div>
@@ -221,11 +225,13 @@
                     </div>
                     <div class="slide">
                         <div class="text-slider">
-                            <img class="stars" src="./img/star.svg" alt="stars">
-                            <img class="stars" src="./img/star.svg" alt="stars">
-                            <img class="stars" src="./img/star.svg" alt="stars">
-                            <img class="stars" src="./img/star.svg" alt="stars">
-                            <img class="stars" src="./img/star.svg" alt="stars">
+                            <ul class="stars">
+                                <li><img src="./img/star.svg" alt="stars"></li>
+                                <li><img src="./img/star.svg" alt="stars"></li>
+                                <li><img src="./img/star.svg" alt="stars"></li>
+                                <li><img src="./img/star.svg" alt="stars"></li>
+                                <li><img src="./img/star.svg" alt="stars"></li>
+                            </ul>
                             <blockquote>“Being a family means you are a part of something very wonderful. It means you will love and be loved for the rest of
                             your life”</blockquote>
                             <cite>Family </cite>
