--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
                         </li>
                     </ul>
                     <ul class="buttons">
-                        <li class="login-wrapper">
-                            <button class="transparent">Login</button>
+                        <li>
+                            <div class="login-wrapper">
+                                <button>Login</button>
+                            </div>
                         </li>
                         <li><button>Register</button></li>
                     </ul>
